--- a/AutoAppo_StevenVR/Views/OptionPage.xaml
+++ b/AutoAppo_StevenVR/Views/OptionPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AutoAppo_StevenVR.Views.OptionsPage">
+             x:Class="AutoAppo_StevenVR.Views.OptionPage">
     <ContentPage.Content>
         <ScrollView>
             <FlexLayout Direction="Column">
@@ -32,7 +32,7 @@
                             HeightRequest="150"
                             WidthRequest="100"
                             FontSize="17"
-                            CornerRadius="20"/>
+                            CornerRadius="20" Clicked="BtnAppoManagment_Clicked"/>
 
                     <Button Grid.Row="0" Grid.Column="1"
                            x:Name="BtnUserManagment" 
@@ -41,7 +41,8 @@
                             HeightRequest="150"
                             WidthRequest="100"
                             FontSize="17"
-                            CornerRadius="20"/>
+                            CornerRadius="20"
+                            Clicked="BtnUserManagment_Clicked"/>
 
                     <Button Grid.Row="1" Grid.Column="0" 
                             x:Name="BtnScheduleManagment" 
@@ -70,5 +71,3 @@
         </ScrollView>
     </ContentPage.Content>
 </ContentPage>
- 
- 
