--- a/AutoAppo_StevenVR/Views/PasswordRecoveryPage.xaml
+++ b/AutoAppo_StevenVR/Views/PasswordRecoveryPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AutoAppo_StevenVR.Views.PasswordRecoveryPage">
-    
+    <ContentPage.Content>
+
         <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Padding="15,50,15,0">
 
             <Entry x:Name="TxtEmail" Placeholder="User Email" FontSize="20" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"  >
@@ -39,4 +40,3 @@
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
- 
